--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>진성 스터디 프로젝트</title>
   <style>
     * {
       /* border: 1px solid black; */
@@ -41,6 +41,15 @@
     .author {
       width: 20%;
     }
+    
+    .deleteBtn {
+      width: 20px;
+      height: 20px;
+      border: none;
+      background-color: red;
+      cursor: pointer;
+    }
+
   </style>
 </head>
 
@@ -48,10 +57,13 @@
   <div class="container">
     <!-- 메모 리스트 아이템 -->
     <div class="header">
-        <input placeholder="이메일" class="emailInput">
-        <input placeholder="비밀번호" class="passwordInput">
-        <button>로그인</button>
+      <input placeholder="이메일" class="emailInput">
+      <input placeholder="비밀번호" class="passwordInput">
+      <button>로그인</button>
       <button>가입</button>
+      <button onclick="location.href='/addMemo'">등록</button>
+      <!-- <button th:href="@{/addMemo}">등록</button> -->
+      <!-- <a th:href="@{/addMemo}">등록</a> -->
     </div>
     <div class="memoItem" th:each="m: ${memoList}">
       <div class="memoItem_contents">
@@ -59,6 +71,7 @@
         <p class="memoItem_contents_main" th:text="${m.content}">본문</p>
       </div>
       <span class="author" th:text="${m.author}">작성자</span>
+      <button class="deleteBtn">X</button>
     </div>
   </div>
 
