--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -66,7 +66,7 @@
         <p class="memoItem_contents_main" th:text="${m.content}">본문</p>
       </div>
       <span class="author" th:text="${m.author}">작성자</span>
-      <button class="deleteBtn">X</button>
+      <button class="deleteBtn" th:onclick="|location.href='@{/deleteMemo(memoId=${m.memoId})}'|">X</button>
     </div>
   </div>
 
