--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,13 +53,15 @@
 
 <body>
   <div class="container">
-    <!-- 메모 리스트 아이템 -->
+    <div th:text="${abc}">하이요</div>
     <div class="header">
-      <input placeholder="이메일" class="emailInput">
-      <input placeholder="비밀번호" class="passwordInput">
-      <button>로그인</button>
-      <button>가입</button>
-      <button onclick="location.href='/addMemo'">등록</button>
+      <form th:unless="${isLogined}" method="POST" th:action="@{/login}" th:object="${loginParam}">
+        <input class="emailInput" required placeholder="이메일"  th:field="*{userEmail}">
+        <input  class="passwordInput" type="password" required placeholder="비밀번호" th:field="*{userPassword}">
+        <button>로그인</button>
+        <button type="button">가입</button>
+      </form>
+      <button type="button" th:if="${isLogined}" onclick="location.href='/addMemo'">등록</button>
     </div>
     <div class="memoItem" th:each="m: ${memoList}">
       <div class="memoItem_contents" th:onclick="|location.href='@{/modify(memoId=${m.memoId})}'|">
@@ -67,7 +69,7 @@
         <p class="memoItem_contents_main" th:text="${m.content}">본문</p>
       </div>
       <span class="author" th:text="${m.author}">작성자</span>
-      <button class="deleteBtn" th:onclick="|location.href='@{/deleteMemo(memoId=${m.memoId})}'|">X</button>
+      <button class="deleteBtn" th:if="${isLogined}" th:onclick="|location.href='@{/deleteMemo(memoId=${m.memoId})}'|">X</button>
     </div>
   </div>
 
