--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,15 +56,16 @@
     <div th:text="${abc}">하이요</div>
     <div class="header">
       <form th:unless="${isLogined}" method="POST" th:action="@{/login}" th:object="${loginParam}">
+        <!-- <form th:unless="${isLogined}" th:object="${loginParam}"> -->
         <input class="emailInput" required placeholder="이메일"  th:field="*{userEmail}">
-        <input  class="passwordInput" type="password" required placeholder="비밀번호" th:field="*{userPassword}">
-        <button>로그인</button>
-        <button type="button">가입</button>
+        <input  class="passwordInput" type="password" required placeholder="비밀번호" th:field="*{userPassword}" value="abc">
+        <button >로그인</button>
+        <button formaction="/signUp" formmethod="post">가입</button>
       </form>
       <button type="button" th:if="${isLogined}" onclick="location.href='/addMemo'">등록</button>
     </div>
     <div class="memoItem" th:each="m: ${memoList}">
-      <div class="memoItem_contents" th:onclick="|location.href='@{/modify(memoId=${m.memoId})}'|">
+      <div class="memoItem_contents" th:onclick="|${isLogined} ? location.href='@{/modify(memoId=${m.memoId})}' : null|">
         <b class="memoItem_contents_title" th:text="${m.title}">제목</b>
         <p class="memoItem_contents_main" th:text="${m.content}">본문</p>
       </div>
