--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,6 +30,7 @@
       display: flex;
       /* overflow: hidden; */
     }
+
     .memoItem_contents {
       width: 80%;
       /* cursor: pointer; */
@@ -54,18 +55,37 @@
       background-color: red;
       cursor: pointer;
     }
+
     .commentBox {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      margin-bottom: 20px;
       /* border: 1px solid black; */
     }
-    .commentBox > input {
+
+    .commentBox>input {
       width: 80%;
     }
-    .commentBox > button {
+
+    .commentBox>button {
       width: 15%;
       /* margin: 0px 10px; */
+    }
+    .commentList {
+      display: flex;
+      /* flex-direction: column; */
+      justify-content: space-between;
+      align-items: center;
+      width: 80%;
+      border: 0.5px solid rgba(128, 128, 128, 0.336);
+      /* border-radius: 3px; */
+    }
+    .commentList > div {
+      display: inline-block;
+    }
+    .commentList > b {
+      margin-right: 3.5%;
     }
   </style>
 </head>
@@ -87,20 +107,30 @@
     <div class="memoItem" th:each="m: ${memoList}">
       <div class="memoItem_main">
         <div class="memoItem_contents" th:classappend="${m.authorId} == ${session.userId} ? 'hover'"
-        th:onclick="|(${m.authorId} == ${session.userId}) ? location.href='@{/modify(memoId=${m.memoId})}' : null|">
-        <b class="memoItem_contents_title" th:text="${m.title}">제목</b>
-        <p class="memoItem_contents_main" th:text="${m.content}">본문</p>
-      </div>
-      <span class="author" th:text="${m.authorEmail}">작성자</span>
-      <button class="deleteBtn" th:if="${m.authorId} == ${session.userId}"
-        th:onclick="|location.href='@{/deleteMemo(memoId=${m.memoId})}'|">X</button>
+          th:onclick="|(${m.authorId} == ${session.userId}) ? location.href='@{/modify(memoId=${m.memoId})}' : null|">
+          <b class="memoItem_contents_title" th:text="${m.title}">제목</b>
+          <p class="memoItem_contents_main" th:text="${m.content}">본문</p>
+        </div>
+        <span class="author" th:text="${m.authorEmail}">작성자</span>
+        <button class="deleteBtn" th:if="${m.authorId} == ${session.userId}"
+          th:onclick="|location.href='@{/deleteMemo(memoId=${m.memoId})}'|">X</button>
       </div>
 
 
-      <form class="commentBox">
-        <input>
+      <form class="commentBox" th:if="${session.isLogined}">
+        <input maxlength="150">
         <button>댓글</button>
       </form>
+      <div class="commentList">
+        <div>
+          <b>띠용이</b>
+          <span>정말 띠용하네요.</span>
+        </div>
+        <span>2022-01-01</span>
+      </div>
+      <!-- <div th:each="c: ${commentList}">
+
+      </div> -->
     </div>
   </div>
 
