1. 댓글 등록 기능 추가 2. 메모와 댓글 조회 구현을 위한 엔티티 수정 및 기능 구현 작업 중 저장

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -72,6 +72,7 @@
       width: 15%;
       /* margin: 0px 10px; */
     }
+
     .commentList {
       display: flex;
       /* flex-direction: column; */
@@ -81,10 +82,12 @@
       border: 0.5px solid rgba(128, 128, 128, 0.336);
       /* border-radius: 3px; */
     }
-    .commentList > div {
+
+    .commentList>div {
       display: inline-block;
     }
-    .commentList > b {
+
+    .commentList>b {
       margin-right: 3.5%;
     }
   </style>
@@ -115,10 +118,13 @@
         <button class="deleteBtn" th:if="${m.authorId} == ${session.userId}"
           th:onclick="|location.href='@{/deleteMemo(memoId=${m.memoId})}'|">X</button>
       </div>
-
-
-      <form class="commentBox" th:if="${session.isLogined}">
-        <input maxlength="150">
+      <form class="commentBox" th:if="${session.isLogined}" method="POST" th:action="@{/comment(memoId=${m.memoId})}"
+        th:object="${newComment}">
+        <input required maxlength="150" th:field="*{content}">
+        <!-- <input class="hidden" th:value="*{authorId} = ${session.userId}"> -->
+        <!-- <input class="hidden" th:value="${session.userEmail}"> -->
+        <!-- <input class="hidden" th:field="${session.userId}"> -->
+        <!-- <input maxlength="150"> -->
         <button>댓글</button>
       </form>
       <div class="commentList">
