--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -94,8 +94,8 @@
   <div class="container">
     <div class="header">
       <form th:unless="${session.isLogined}" method="POST" th:action="@{/login}" th:object="${loginParam}">
-        <input class="emailInput" required placeholder="이메일" th:field="*{userEmail}">
-        <input class="passwordInput" type="password" required placeholder="비밀번호" th:field="*{userPassword}">
+        <input class="emailInput" required autocomplete="off" placeholder="이메일" th:field="*{userEmail}">
+        <input class="passwordInput" type="password" required autocomplete="off" placeholder="비밀번호" th:field="*{userPassword}">
         <button>로그인</button>
         <button formaction="/signUp" formmethod="post">가입</button>
       </form>
@@ -103,8 +103,11 @@
       <button type="button" style="margin: 0px 5px;" th:if="${session.isLogined}"
         onclick="location.href='/addMemo'">등록</button>
       <button type="button" th:if="${session.isLogined}" onclick="location.href='/logout'">로그아웃</button>
-      <button th:onclick="location.href='/download'" style="margin-left: 0.5%;">엑셀 다운로드</button>
+      <button th:onclick="location.href='/download'" style="margin-left: 0.5%;">모든 메모 엑셀 다운로드</button>
     </div>
+    <h1 th:unless="${#lists.size(memoList)}" style="width: inherit; text-align: center;">
+      등록된 메모가 없습니다.
+    </h1>
     <div class="memoItem" th:each="m: ${memoList}">
       <div class="memoItem_main">
         <div class="memoItem_contents" th:classappend="${m.authorId} == ${session.userId} ? 'hover'"
