--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -37,6 +37,7 @@
 
     .memoItem_contents_main {
       height: 100%;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     .author {
@@ -93,16 +94,19 @@
 <body>
   <div class="container">
     <div class="header">
-      <form th:unless="${session.isLogined}" method="POST" th:action="@{/login}" th:object="${loginParam}">
+      <form th:unless="${session.isLogined}" method="post" th:action="@{/login}" th:object="${loginParam}">
         <input class="emailInput" required autocomplete="off" placeholder="이메일" th:field="*{userEmail}">
-        <input class="passwordInput" type="password" required autocomplete="off" placeholder="비밀번호" th:field="*{userPassword}">
+        <input class="passwordInput" type="password" required autocomplete="off" placeholder="비밀번호"
+          th:field="*{userPassword}">
         <button>로그인</button>
+        <!-- <button class="signUpBtn" type="button">가입</button> -->
         <button formaction="/signUp" formmethod="post">가입</button>
       </form>
       <span th:text="${session.userEmail}">로그인한 유저이메일</span>
       <button type="button" style="margin: 0px 5px;" th:if="${session.isLogined}"
         onclick="location.href='/addMemo'">등록</button>
-      <button type="button" th:if="${session.isLogined}" onclick="location.href='/logout'">로그아웃</button>
+      <!-- <button type="button" th:if="${session.isLogined}" onclick="logout()">로그아웃</button> -->
+      <button class="logoutBtn" type="button" th:if="${session.isLogined}" onclick="location.href='/logout'">로그아웃</button>
       <button th:onclick="location.href='/download'" style="margin-left: 0.5%;">모든 메모 엑셀 다운로드</button>
     </div>
     <h1 th:unless="${#lists.size(memoList)}" style="width: inherit; text-align: center;">
@@ -113,11 +117,12 @@
         <div class="memoItem_contents" th:classappend="${m.authorId} == ${session.userId} ? 'hover'"
           th:onclick="|(${m.authorId} == ${session.userId}) ? location.href='@{/modify(memoId=${m.memoId})}' : null|">
           <b class="memoItem_contents_title" th:text="${m.title}">제목</b>
-          <p class="memoItem_contents_main" th:text="${m.content}">본문</p>
+          <pre class="memoItem_contents_main" th:text="${m.content}">본문</pre>
         </div>
         <span class="author" th:text="${m.authorEmail}">작성자</span>
         <button class="deleteBtn" th:if="${m.authorId} == ${session.userId}"
           th:onclick="|location.href='@{/deleteMemo(memoId=${m.memoId})}'|">X</button>
+        <!-- ||을 넣어야 (memoId=${m.memoId}) 부분이 memoId?m.momoId string 값으로 변환된다.  /@%7B/deleteMemo(memoId=$%7Bm.memoId%7D)%7D -->
       </div>
       <form class="commentBox" th:if="${session.isLogined}" method="POST" th:action="@{/comment(memoId=${m.memoId})}"
         th:object="${newComment}">
@@ -134,6 +139,42 @@
       </div>
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.6.2.js"></script>
+  <script th:inline="javascript">
+    !![[${ message }]] && alert([[${ message }]]);
+    !![[${ error }]] && alert([[${ error }]]);
+    console.log([[${session}]]);
+    const logout = () => {
+      // location.href='/'
+      
+      console.log([[${session}]]);
+    }
+    // console.log([[${session}]]);
+    // $('.signUpBtn').click((e) => {
+    //   const userEmail = $('.emailInput').val();
+    //   const userPassword = $('.passwordInput').val();
+
+    //   if (!!userEmail && !!userPassword) {
+    //     $.ajax({
+    //       type: "post",
+    //       url: "/signUp",
+    //       data: {
+    //         userEmail,
+    //         userPassword
+    //       },
+    //       dataType: "text",
+    //       success: (res) => {
+    //         console.log('성공성공', res);
+    //       },
+    //       error: (err) => {
+    //         console.log('실패실패', err);
+    //       }
+    //     });
+    //   } else {
+    //     alert('올바른 이메일과 비밀번호를 입력해주세요')
+    //   }
+    // });
+  </script>
 </body>
 
 </html>
